feat:app部分功能完善
